--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://diydiagnostics.github.io/NodeJS-Test/",
+  "homepage": "https://Yun-yc24383.github.io/NodeJS-Test/",
   "name": "test-app",
   "version": "0.1.0",
   "private": true,
